--- a/assets/scss/modules/_preference-switch.scss
+++ b/assets/scss/modules/_preference-switch.scss
@@ -42,4 +42,8 @@
     position: absolute;
     transition: all 200ms ease-in-out;
     z-index: 1;
+
+    &.right {
+        left: 50%;
+    }
 }
